Inicio de projeto hamburgueria fiz algumas alterações no svg dos icones da pagina e alterei o titulo do html para Burgueria.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content=""
     />
-    <title>Plant Me</title>
+    <title>Burgueria</title>
     <link rel="icon" type="image/svg+xml" href="https://user-images.githubusercontent.com/90524474/177552018-865efbf0-554c-4081-87a9-acbd049c579b.svg">
   </head>
   <body>
